--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
-<body>
+<head>
+    <title> Christian Bunker </title>
+<bodystyle="background-color:LightGray;">
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
-<p> Test 2 </p>
+<h1> About Me <h1>
+    <p> I am a graduate student in the Physics department of the University of Florida. I am interested in computational physics and statistical mechanics, with a focus on how these approaches can be used to investigate complex quantum mechanical and biophysical systems. I enjoy studying how physical models and how they can be made to bridge theoretical insights and observed behaviors.
 </body>
 </html>
