--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
 <bodystyle="background-color:LightGray;">
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
-<h1> About Me <h1>
-    <p> I am a graduate student in the Physics department of the University of Florida. I am interested in computational physics and statistical mechanics, with a focus on how these approaches can be used to investigate complex quantum mechanical and biophysical systems. I enjoy studying how physical models and how they can be made to bridge theoretical insights and observed behaviors.
+
+<h1> About Me </h1>
+    <p> I am a graduate student in the Physics department of the University of Florida. I am interested in computational physics and statistical mechanics, with a focus on how these approaches can be used to investigate complex quantum mechanical and biophysical systems. I enjoy studying how physical models and how they can be made to bridge theoretical insights and observed behaviors. </p>
+ 
+<h2> Curriculum Vitae </h2>
+    
+    
 </body>
 </html>
