--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <p> I am a graduate student in the Physics department of the University of Florida. I am interested in computational physics and statistical mechanics, with a focus on how these approaches can be used to investigate complex quantum mechanical and biophysical systems. I enjoy studying how physical models and how they can be made to bridge theoretical insights and observed behaviors. </p>
  
 <h2> Curriculum Vitae </h2>
+<a href="url">link text</a>
     
     
 </body>
