--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <title> Christian Bunker </title>
-<bodystyle="background-color:LightGray;">
+<body style="background-color:LightGray;">
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 
-<h1> About Me </h1>
-    <p> I am a graduate student in the Physics department of the University of Florida. I am interested in computational physics and statistical mechanics, with a focus on how these approaches can be used to investigate complex quantum mechanical and biophysical systems. I enjoy studying how physical models and how they can be made to bridge theoretical insights and observed behaviors. </p>
+<h1 style="text-align:center"> About Me </h1>
+    <p style="text-align:center; font-family:Arial"> I am a graduate student in the Physics department of the University of Florida. I am interested in computational physics and statistical mechanics, with a focus on how these approaches can be used to investigate complex quantum mechanical and biophysical systems. I enjoy studying how physical models and how they can be made to bridge theoretical insights and observed behaviors. </p>
  
 <h2> Curriculum Vitae </h2>
 <a href="https://github.com/cpbunker/cpbunker.github.io/blob/master/BunkerCV.pdf">CV</a>
