--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <html>
 <head>
     <title> Christian Bunker </title>
-<body style="background-color:LightGray;">
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <style>
+        body{
+            background-image: url('tyler-lastovich-6ezUV6EzyYs-unsplash.jpg');
+            background-repeat: no-repeat;
+        }
+    </style>
+</head>
+<body>
 
+<div style="background-color:white; padding:30px">
 <h1 style="text-align:center"> About Me </h1>
     <div style="padding:10px;">
     <p style="font-family:Arial; font-size:1.5em;"> I am a graduate student in the physics department of the University of Florida. I am interested in computational physics and statistical mechanics, with a focus on how these approaches can be used to investigate complex quantum mechanical and biophysical systems. I enjoy studying how physical models and how they can be made to bridge theoretical insights and observed behaviors. </p>
@@ -26,6 +32,6 @@
     </ul>
     </div>
     
-    
+<div>
 </body>
 </html>
