Resize background image

--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
         body{
             background-image: url('tyler-lastovich-6ezUV6EzyYs-unsplash.jpg');
             background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-size: cover;
         }
     </style>
 </head>
 <body>
 
-<div style="background-color:white; padding:30px">
+<div style="background-color:azure; padding:50px">
 <h1 style="text-align:center"> About Me </h1>
     <div style="padding:10px;">
     <p style="font-family:Arial; font-size:1.5em;"> I am a graduate student in the physics department of the University of Florida. I am interested in computational physics and statistical mechanics, with a focus on how these approaches can be used to investigate complex quantum mechanical and biophysical systems. I enjoy studying how physical models and how they can be made to bridge theoretical insights and observed behaviors. </p>
