--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         }
     </style>
 </head>
-<body>
+<body style="padding:30px">
 
-<div style="background-color:azure; padding:50px">
+<div style="padding:30px">
 <h1 style="text-align:center"> About Me </h1>
     <div style="padding:10px;">
     <p style="font-family:Arial; font-size:1.5em;"> I am a graduate student in the physics department of the University of Florida. I am interested in computational physics and statistical mechanics, with a focus on how these approaches can be used to investigate complex quantum mechanical and biophysical systems. I enjoy studying how physical models and how they can be made to bridge theoretical insights and observed behaviors. </p>
@@ -28,7 +28,11 @@
  <h2> Research Experience </h2>
     <div style="background-color:white; padding:10px;">
     <ul style="font-family:Arial;">
-    <li> <b> Topological Quantum Matter Group </b> Dr. Badih Assaf, Department of Physics, University of Notre Dame. </li>
+    <li> <b> Topological Quantum Matter Group </b> Dr. Badih Assaf, Department of Physics, University of Notre Dame.
+        <p> I spent Spring 2020 doing full time research for this condensed matter experiment group that focuses on topological materials. I was exposed to a variety of new research and methods. My first major project was to numerically calculate the zero dispersion energy levels of band gap inverted IV-VI quantum wells. This required directed reading on semiconductor heterostrocutres, the envelop function method and k.p perturbation theory, which came largely from <it> Wave Mechanics Applied to Semiconductor Heterostructures<it> by G. Bastard. I later extended the code to determine nonzero dispersion energies. During this time, I also collected XRD, Raman and FTIR data characterizing many samples of SrBiSe and CuBiSe thin films. My numerical results for the bound state energies of PbSnSe quantum wells were used in the paper "Weak antilocalization beyond the fully diffusive regime in Pb1-xSnxSe topological quantum wells." </p>
+    </li>
+    <li> <b> W Mass Group </b> Dr. Josh Bendavid, CMS, CERN. </li>
+    <li> <b> Nanoscale Electronics and Optoelectronics Lab  </b> Dr. Daniel Santavicca, Department of Physics, University of North Florida. </li>
     <li> <b> W Mass Group </b> Dr. Josh Bendavid, CMS, CERN. </li>
     
     </ul>
