--- a/index.html
+++ b/index.html
@@ -12,8 +12,24 @@
     </style>
 </head>
 <body style="padding:30px">
+    
+<!-- Nav Bar -->
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+    <div class="navbar-header">
+        <a class="navbar-brand" href="#">WebSiteName</a>
+    </div>
+    <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Home</a></li>
+        <li><a href="#">Page 1</a></li>
+        <li><a href="#">Page 2</a></li>
+        <li><a href="#">Page 3</a></li>
+    </ul>
+    </div>
+</nav>
 
-<div style="padding:30px">
+<!-- Intro -->
+<div style="background-color:Gainsboro; padding:30px">
 <h1 style="text-align:center"> About Me </h1>
     <div style="padding:10px;">
     <p style="font-family:Arial; font-size:1.5em;"> I am a graduate student in the physics department of the University of Florida. I am interested in computational physics and statistical mechanics, with a focus on how these approaches can be used to investigate complex quantum mechanical and biophysical systems. I enjoy studying how physical models and how they can be made to bridge theoretical insights and observed behaviors. </p>
