--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     
     <!-- first column just picture -->
     <div class="col-sm-6">
-        <img src="JuraMts.jpg" class="img-responsive" alt="Jura Mts">
+        <img src="JuraMts.JPG" class="img-responsive" alt="Jura Mts">
     </div>
     
     <!-- 2nd column bio info -->
@@ -44,9 +44,10 @@
     <div style="padding:10px;">
     <p style="font-family:Arial; font-size:1.5em;"> I am a graduate student in the physics department of the University of Florida. I am interested in computational physics and statistical mechanics, with a focus on how these approaches can be used to investigate complex quantum mechanical and biophysical systems. I enjoy studying how physical models and how they can be made to bridge theoretical insights and observed behaviors. </p>
     </div>
- 
-<h2> Curriculum Vitae </h2>
-<a href="https://github.com/cpbunker/cpbunker.github.io/blob/master/BunkerCV.pdf">CV</a>
+
+<!-- relevant personal links -->
+<a href="https://github.com/cpbunker/cpbunker.github.io/blob/master/BunkerCV.pdf">Curriculum Vitae</a> -
+<a href="https://www.linkedin.com/in/christian-bunker-876027101/">LinkedIn</a>
 
     </div><!-- end bio info 2nd column -->
 
@@ -56,7 +57,7 @@
 
 <!-- Research info (this will go on separate page -->
 
-<h1 style="font-family:Arial;;"> Research </h1>
+<h1 style="font-family:Arial; text-align:left;"> Research </h1>
  <h2> Research Interests </h2>
  
  <h2> Research Experience </h2>
