Move images and pdfs to images file

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     
     <!-- first column just picture -->
     <div class="col-sm-7">
-        <img src="JuraMts.JPG" class="img-responsive" alt="Jura Mts">
+        <img src="images/JuraMts.JPG" class="img-responsive" alt="Jura Mts">
     </div>
     
     <!-- 2nd column bio info -->
@@ -48,7 +48,7 @@
 
 <!-- relevant personal links -->
 <p style="text-align:center; font-size:1.4em;">
-<a href="https://github.com/cpbunker/cpbunker.github.io/blob/master/BunkerCV.pdf">Curriculum Vitae</a> |
+<a href="https://github.com/cpbunker/cpbunker.github.io/images/BunkerCV.pdf">Curriculum Vitae</a> |
 <a href="https://www.linkedin.com/in/christian-bunker-876027101/">LinkedIn</a>
 </p>
 
