--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     <ul class="nav navbar-nav">
         <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">Research</a></li>
+        <li><a href="https://cpbunker.github.io/Research/">Research</a></li>
         <li><a href="#">Publications</a></li>
         <li><a href="#">Page 3</a></li>
     </ul>
