--- a/Research/index.html
+++ b/Research/index.html
@@ -22,8 +22,7 @@
     <ul class="nav navbar-nav">
         <li class="active"><a href="https://cpbunker.github.io/">Home</a></li>
         <li><a href="https://cpbunker.github.io/Research/">Research</a></li>
-        <li><a href="#">Publications</a></li>
-        <li><a href="#">Page 3</a></li>
+        <li><a href="https://cpbunker.github.io/Publications/">Publications</a></li>
     </ul>
     </div>
 </nav>
@@ -31,9 +30,9 @@
 <!-- Research info -->
 <div style="background-color:Snow; padding:40px;">
 
-<h1 style="font-family:Trebuchet MS; text-align:right;"><b>RESEARCH</b></h1>
+<h1 style="font-family:Trebuchet MS; text-align:right;"><b>RESEARCH</b></h1><br><br>
 
-<h2 style="text-align:center;">Research Interests</h2>
+<h2 style="text-align:center;">Research Interests</h2><hr>
      
 <h2 style="text-align:center;">Research Experience </h2><hr>
 
@@ -79,7 +78,7 @@
 
 </div> <!-- end body background padding div>
 <!-- Footer -->
-<footer style="background-color:LightGray;">
+<footer style="background-color:Gainsboro;">
 <div style="padding:20px;">
 <h3> Contact </h3>
 <p> cpbunker(at)ufl(dot)edu</p>
