--- a/Research/index.html
+++ b/Research/index.html
@@ -42,8 +42,9 @@
         
         <div class="col-sm-4" style="text-align:center;">
         <h4>Random Graphs</h4></div>
-        <div class="col-sm-8" style="padding:10px"></div>
-        <p>I am interested by the properties of what Paul Erdős and Alfréd Rényi called <a href="https://en.wikipedia.org/wiki/Erdős–Rényi_model">random graphs</a>. I encountered these in Allen B Downey's excellent book <i>Think Complexity<i> which uses Python to reimplement Watts and Strogatz's <a href="https://doi.org/10.1038/30918">result</a> that small modifications of random graphs can closely replicate the structure of social networks and other interesting "small-world" networks. It also explores the <a href="https://www.researchgate.net/deref/http%3A%2F%2Fdx.doi.org%2F10.1126%2Fscience.286.5439.509">behavior</a> due to Barabási and Albert of random graphs as they grow.
+        <div class="col-sm-8" style="padding:10px">
+        <p>I am interested by the properties of what Paul Erdős and Alfréd Rényi called <a href="https://en.wikipedia.org/wiki/Erdős–Rényi_model">random graphs</a>. I encountered these in Allen B Downey's excellent book <i>Think Complexity</i> which uses Python to reimplement Watts and Strogatz's <a href="https://doi.org/10.1038/30918">result</a> that small modifications of random graphs can closely replicate the structure of social networks and other interesting "small-world" networks. It also explores the <a href="https://www.researchgate.net/deref/http%3A%2F%2Fdx.doi.org%2F10.1126%2Fscience.286.5439.509">behavior</a> due to Barabási and Albert of random graphs as they grow.
+        </p></div>
      
 <h2 style="text-align:center;">Research Experience </h2><hr>
 
