--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <!-- Intro -->
 <!-- outer BS row container holds columns -->
-<div class="row">
+<div class="row equal">
     
     <!-- first column just picture -->
     <div class="col-sm-7" style="background-color:Gainsboro;">
