--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     
 <!-- Nav Bar -->
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default" style="background-color:Gainsboro;">
     <div class="container-fluid">
     <div class="navbar-header">
         <a class="navbar-brand" href="#">Christian Bunker</a>
