--- a/Research/index.html
+++ b/Research/index.html
@@ -28,7 +28,7 @@
 </nav>
     
 <!-- Research info -->
-<div style="background-color:Snow;">
+<div style="background-color:Snow; padding:40px;">
 
 <h1 style="font-family:Trebuchet MS; text-align:right;"><b>RESEARCH</b></h1><br><br>
 
