--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
     </style>
 </head>
-<body>
+<body style="background-color:Blue;">
     
 <!-- Nav Bar -->
-<nav class="navbar navbar-default" style="background-color:Gainsboro;">
+<nav class="navbar navbar-default" style="background-color:Gainsboro; padding:0px">
     <div class="container-fluid">
     <div class="navbar-header">
         <a class="navbar-brand" href="#">Christian Bunker</a>
