--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     </style>
 </head>
-<body style="background-color:Blue;">
+<body style="background-color:Gainsboro;">
     
 <!-- Nav Bar -->
 <nav class="navbar navbar-default" style="background-color:Gainsboro; padding:0px">
