--- a/Research/index.html
+++ b/Research/index.html
@@ -45,6 +45,8 @@
         <div class="col-sm-8" style="padding:10px">
         <p>I am interested by the properties of what Paul Erdős and Alfréd Rényi called <a href="https://en.wikipedia.org/wiki/Erdős–Rényi_model">random graphs</a>. I encountered these in Allen B Downey's excellent book <i>Think Complexity</i> which uses Python to reimplement Watts and Strogatz's <a href="https://doi.org/10.1038/30918">result</a> that small modifications of random graphs can closely replicate the structure of social networks and other interesting "small-world" networks. It also explores the <a href="http://dx.doi.org/10.1126/science.286.5439.509">behavior</a> due to Barabási and Albert of random graphs as they grow.
         </p></div>
+        
+    </div></div><!-- end row and its padding>
      
 <h2 style="text-align:center;">Research Experience </h2><hr>
 
