--- a/Publications/index.html
+++ b/Publications/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <title>Research</title>
+    <title>Publications</title>
     <style>
 
     </style>
@@ -72,7 +72,7 @@
 
 </div> <!-- end body background padding div>
 <!-- Footer -->
-<footer style="background-color:Gainsboro;">
+<footer style="background-color:WhiteSmoke;">
 <div style="padding:20px;">
 <h3> Contact </h3>
 <p> cpbunker(at)ufl(dot)edu</p>
