--- a/Research/index.html
+++ b/Research/index.html
@@ -92,7 +92,7 @@
 
 </div> <!-- end body background padding div>
 <!-- Footer -->
-<footer style="background-color:Gainsboro;">
+<footer style="background-color:WhiteSmoke;">
 <div style="padding:20px;">
 <h3> Contact </h3>
 <p> cpbunker(at)ufl(dot)edu</p>
