--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body style="background-color:Gainsboro;">
     
 <!-- Nav Bar -->
-<nav class="navbar navbar-default" style="background-color:Gainsboro; padding:0px">
+<nav class="navbar navbar-default">
     <div class="container-fluid">
     <div class="navbar-header">
         <a class="navbar-brand" href="#">Christian Bunker</a>
@@ -58,9 +58,9 @@
 </div>
 
 <!-- Footer -->
-<footer style="background-color:Gainsboro;">
+<footer style="background-color:WhiteSky;">
 <div style="padding:20px;">
-<h3> Contact </h3>
+    <h3 style="text-align:left">Contact</h3><h3 style="text-align:right">[x, p<sub>x</sub>] = i&#295 </h3>
 <p> cpbunker(at)ufl(dot)edu</p>
 </div>
 </footer>
