--- a/Publications/index.html
+++ b/Publications/index.html
@@ -98,12 +98,13 @@
     
 <div class="row" style="padding:20px;">
 <div class="col-sm-6">
-<h3 style="text-align:left">Contact</h3></div>
+<h3 style="text-align:left">Contact</h3>
 <p> cpbunker(at)ufl(dot)edu<br>
 <a href="https://www.linkedin.com/in/christian-bunker-876027101/">LinkedIn</a></p>
+</div>
 
 <div class="col-sm-6">
-<h3 style="text-align:right; font-family:Times New Roman">[S<sub>x</sub>, S<sub>y</sub>,] = i&#295 S<sub>z</sub>, </h3></div>
+<h3 style="text-align:right; font-family:Times New Roman">[S<sub>x</sub>, S<sub>y</sub>] = i&#295 S<sub>z</sub> </h3></div>
 
 </div><!-- close row -->
 </footer>
