--- a/Research/index.html
+++ b/Research/index.html
@@ -53,7 +53,7 @@
         <div class="col-sm-4" style="text-align:center;">
             <h4>Actor simulations of natural phenomena</h4></div>
         <div class="col-sm-8" style="padding:10px">
-            <p>The natural world is full of incredible phenomena in which huge collections of organisms engage in complex, beautiful group behavior. There are many investigations of these behaviors at the intersection of physics computer science.
+            <p>The natural world is full of incredible phenomena in which huge collections of organisms engage in complex, beautiful group behavior. There are many investigations of these behaviors at the intersection of physics computer science. Reynolds' <a href="https://doi.org/10.1145/280811.281008">paper</a> discusses how a model of animals as individual "actors" with a few behavioral options that they choose from according to simple rules can produce realistic simulations of flocks and herds. However, the process of tuning the rules and behavior space to achieve realism is both nontrivial and intriguing.
             </p></div>
     
     </div></div><!-- end row and its padding -->
