Experiment with commutator font

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </div>
     
     <div class="col-sm-6">
-    <h3 style="text-align:right; font-family:Times New Roman">[x, p<sub>x</sub>] = i&#295 </h3></div>
+    <h3 style="text-align:right; font-family:Copperplate">[x, p<sub>x</sub>] = i&#295 </h3></div>
 
 </div><!-- close row -->
 </footer>
