--- a/Research/index.html
+++ b/Research/index.html
@@ -120,7 +120,7 @@
     </div>
     
     <div class="col-sm-6">
-    <h3 style="text-align:right; font-family:Times New Roman">[L<sub>x</sub>, L<sup>2</sup>] = 0 </h3></div>
+    <h3 style="text-align:right; font-family:Perpetua">[L<sub>x</sub>, L<sup>2</sup>] = 0 </h3></div>
 
 </div><!-- close row -->
 </footer>
