Upload more graphs and Jura pics, footer font changes

--- a/Publications/index.html
+++ b/Publications/index.html
@@ -104,7 +104,7 @@
 </div>
 
 <div class="col-sm-6">
-<h3 style="text-align:right; font-family:Computer Modern">[S<sub>x</sub>, S<sub>y</sub>] = i&#295 S<sub>z</sub> </h3></div>
+<h3 style="text-align:right; font-family:Perpetua">[S<sub>x</sub>, S<sub>y</sub>] = i&#295 S<sub>z</sub> </h3></div>
 
 </div><!-- close row -->
 </footer>
