Crop Jura image right

--- a/Research/index.html
+++ b/Research/index.html
@@ -84,7 +84,7 @@
         
         <!-- critical field graph -->
         <div class="row">
-        <div class="col-sm-6"><p style="text-align:center"><img class="img-responsive" src="https://cpbunker.github.io/images/AlphaSnHc.png" style="background-color:Snow; padding:20px;">
+        <div class="col-sm-6"><p style="text-align:center"><img class="img-responsive" src="https://cpbunker.github.io/images/alphaSnHc.png" style="background-color:Snow; padding:20px;">
         <i>Critical field measurements of 48nm &#945-Sn</i></p></div>
         <div class="col-sm-6"><p>I performed magnetotransport measurements recording the longitudinal and Hall voltage of the samples through magnetic field sweeps of 0 to 16 T and temperature sweeps of 1.5 to 7 K.</p></div>
         </div> <!-- end row -->
