--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     
     <!-- first column just picture -->
     <div class="col-sm-7" style="background-color:Gainsboro;padding:20px;">
-        <img src="images/JuraMts.jpg" class="img-responsive; img-rounded" alt="Jura Mts">
+        <img src="images/JuraMts.jpg" class="img-responsive;" alt="Jura Mts">
     </div>
     
     <!-- 2nd column bio info -->
