--- a/Research/index.html
+++ b/Research/index.html
@@ -67,7 +67,7 @@
     <div class="row">
         
         <div class="col-sm-4" style="text-align:center;color:SteelBlue;">
-        <h4>Topological Quantum Matter Group<br><br>Dr. Badih Assaf, Department of Physics, University of Notre Dame.</h4></div>
+        <h4><a href="https://badihassaf.wordpress.com">Topological Quantum Matter Group</a><br><br><a href="https://physics.nd.edu/people/faculty/badih-assaf/">Dr. Badih Assaf</a>, Department of Physics, University of Notre Dame.</h4></div>
         
         <div class="col-sm-8" style="padding:10px">
             <p>I spent Spring 2020 doing full time research for this condensed matter experiment group that focuses on topological materials. I was exposed to a variety of new research and methods. My first major project was to numerically calculate the zero dispersion energy levels of band gap inverted IV-VI quantum wells. This required directed reading on semiconductor heterostructures, the envelop function method and k.p perturbation theory, which came largely from <i> Wave Mechanics Applied to Semiconductor Heterostructures</i> by G. Bastard. I then extended my code to determine nonzero dispersion energies, and culminated the project with this <a href="https://cpbunker.github.io/pdfs/AssafGroupQuantumWell.pdf">presentation</a> to my group. I later applied my code to calculating the bound state energies of PbSnSe quantum wells, which were used in the paper "Weak antilocalization beyond the fully diffusive regime in Pb1-xSnxSe topological quantum wells." </p>
