--- a/Research/index.html
+++ b/Research/index.html
@@ -111,7 +111,7 @@
     <div class="row">
                 
         <div class="col-sm-4" style="text-align:center;color:SteelBlue;">
-        <h4>Nanoscale Electronics and Optoelectronics Lab<br><br>Dr. Daniel Santavicca, Department of Physics, University of North Florida. </h4></div>
+        <h4><a href="https://www.unf.edu/coas/physics/research/Nanoelectronics.aspx">Nanoscale Electronics and Optoelectronics Lab</a><br><br><a href="https://www.unf.edu/bio/N00860924/">Dr. Daniel Santavicca</a>, Department of Physics, University of North Florida. </h4></div>
         
         <div class="col-sm-8" style="padding:10px">
         <p>I was involved in Dr. Santavicca's project to design superconducting nanowire single photon detectors (SNSPD's). My role was to use AWR Design Environment software to design circuit element geometries. I would input unusual shapes, such as a circularly spiraling inductor, and the software would solve Maxwell's equations over all regions of the element to estimate its macroscopic electrical properties. I designed hundreds of different elements spanning parameter space in order to compare their properties and tune the SNSPD circuit to its desired behavior.
