--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <h1 style="text-align:center">About Me</h1>
     <p style="text-align:center;"><img src="images/headshot.jpg" class="img-rounded" style="width:300px; height:240px;"></p>
     <div style="padding:10px;">
-    <p style="font-family:Arial; font-size:1.4em;">I am a graduate student in the physics department of the University of Florida. I am interested in computational physics and statistical mechanics, with a focus on how these approaches can be used to investigate complex quantum mechanical and biophysical systems. I enjoy studying how to construct physical models and the ways that they bridge theoretical insights and observed behaviors.</p>
+    <p style="font-family:Arial; font-size:1.4em;">I am a graduate student in the physics department of the University of Florida. I am interested in computational physics and statistical mechanics, with a focus on how these approaches can be used to investigate complex quantum mechanical and biophysical systems. I enjoy studying physical models and how implementation of simple rules can explain emergent behaviors.</p>
     </div>
 
 <!-- relevant personal links -->
