--- a/Research/index.html
+++ b/Research/index.html
@@ -63,7 +63,7 @@
             <div class="col-sm-3"></div>
             </div> <!-- end row -->
             
-            <p>As I continue to learn about solid state physics in graduate school, I hope to expand my horizons in this area.
+            <p>As I continue to study solid state physics in graduate school, I will expand my horizons in this area. I hope to learn more about how this topic connects with exciting new research areas such as valleytronics and exciton physics.
             </p></div>
 
     </div></div><!-- end row and its padding -->
@@ -105,7 +105,7 @@
         <!-- critical field graph -->
         <div class="row">
         <div class="col-sm-4"><p style="text-align:center"><img class="img-responsive" src="https://cpbunker.github.io/images/alphaSnHc.png" style="background-color:Snow; padding:20px;">
-            <i>I made critical field measurements of 48nm &#945-Sn.</i></p></div>
+            <i>I collected critical field measurements of 48nm &#945-Sn.</i></p></div>
         <div class="col-sm-8"><p>A collaborating group saw potential superconductivity in thin (10-50 nm) &#945-Sn films at low temperature, which we sought to investigate further. I performed magnetotransport measurements recording the longitudinal and Hall resistance of the samples through magnetic field sweeps of 0 to 16 T and temperature sweeps of 1.5 to 4 K. I analyzed the resistance vs. field data for evidence of Shubnokov de Haas oscillations which had been previously <a href="https://arxiv.org/abs/2002.12248">observed</a> in &#945-Sn. I summarized this work in the following <a href="https://cpbunker.github.io/pdfs/AssafGroupQuantumWell.pdf">presentation</a> to the group.</p></div>
         </div> <!-- end row -->
         
