--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
     
     <!-- 2nd column bio info -->
-    <div class="col-xs-5" style="background-color:Gainsboro; height:auto;">
+    <div class="col-sm-5" style="background-color:Gainsboro; height:auto;">
     <div style="padding:20px;">
     
 <h1 style="text-align:center">About Me</h1>
