Add blank outer columns to research page

--- a/Research/index.html
+++ b/Research/index.html
@@ -32,6 +32,11 @@
 
 <h1 style="font-family:Trebuchet MS; text-align:right;"><b>RESEARCH</b></h1><br><br>
 
+<!-- surround whole page with blank columns to each side -->
+<div class="row">
+<div class="col-sm-1"></div><!-- blanck space on side -->
+
+<div class="col-sm-10"><!-- inner column has content -->
 <h2 style="text-align:center;">Research Interests</h2><hr>
 
 <!-- 1 row for each -->
@@ -140,6 +145,10 @@
     </div> <!-- end row div -->
         
 </div> <!-- end research list and padding div -->
+
+</div> <!-- end content column -->
+<div class="col-sm-1"></div><!-- blanck space on side -->
+</div> <!-- end row div that separates outer blank space -->
 
 </div> <!-- end body background padding div>
        
