--- a/index.html
+++ b/index.html
@@ -57,18 +57,21 @@
 <!-- end this row -->
 </div>
 
+<br>
 <!-- Footer -->
 <footer style="background-color:WhiteSmoke;">
     
 <div class="row" style="padding:20px;">
-    <div class="col-sm-6">
+    <div class="col-sm-1"></div> <!-- blank space -->
+    <div class="col-sm-5">
     <h3 style="text-align:left">Contact</h3>
     <p> cpbunker(at)ufl(dot)edu<br>
     <a href="https://www.linkedin.com/in/christian-bunker-876027101/">LinkedIn</a></p>
     </div>
     
-    <div class="col-sm-6">
-    <h3 style="text-align:right; font-family:Perpetua">[x, p<sub>x</sub>] = i&#295 </h3></div>
+    <div class="col-sm-5">
+    <h3 style="text-align:right; font-family:Perpetua">[x, p<sub>x</sub>] = i&#295</h3></div>
+    <div class="col-sm-1"></div> <!-- blank space -->
 
 </div><!-- close row -->
 </footer>
