--- a/Publications/index.html
+++ b/Publications/index.html
@@ -29,7 +29,11 @@
     
 <!-- Publications -->
 
-<div style="background-color:Snow; padding:40px;">
+<!-- surround whole page with blank columns to each side -->
+<div class="row" >
+<div class="col-sm-1"></div><!-- blanck space on side -->
+
+<div class="col-sm-10" style="background-color:Snow"><!-- inner column has content -->
 
 <h1 style="font-family:Trebuchet MS; text-align:right;"><b>PUBLICATIONS</b></h1><br><br>
 
@@ -92,7 +96,9 @@
     </ul>
 
 
-</div> <!-- end body background padding div>
+</div> <!-- end content column -->
+<div class="col-sm-1"></div><!-- blanck space on side -->
+</div> <!-- end row div that separates outer blank space -->
 
        <br>
        <!-- Footer -->
