--- a/Reading/index.html
+++ b/Reading/index.html
@@ -42,12 +42,12 @@
     <div class="col-sm-1"></div><!-- padding -->
     
     <div class="col-sm-5">
-        <h4><a href="https://arxiv.org/abs/math/9307227">“Theoretical Mathematics: towards a cultural synthesis of mathematics and theoretical physics</a></h4>
+        <h4><a href="https://arxiv.org/abs/math/9307227">Theoretical Mathematics: towards a cultural synthesis of mathematics and theoretical physics</a></h4>
         <p><blockquote>"...unreliability is certainly a problem in theoretical physics, where the primary literature often becomes so irrelevant that it is abandoned wholesale. I. M. Singer has compared the physics literature to a blackboard that must be periodically erased. Physicists traditionally obtain much less benefit from the historical back- ground of a problem, and they are less apt to search the literature. The citation half-life of physics papers is much shorter than in mathematics."</blockquote></p>
     </div> <!-- end column -->
     
     <div class="col-sm-5">
-        <h4><a href="">“Title link</a></h4>
+        <h4><a href="">Title link</a></h4>
         <p><blockquote>"quotation"</blockquote></p>
     </div> <!-- end column -->
 
