--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 <p style="text-align:center; font-size:1.4em;">
 <a href="https://cpbunker.github.io/images/BunkerCV.pdf">Curriculum Vitae</a> |
 <a href="https://www.linkedin.com/in/christian-bunker-876027101/">LinkedIn</a>
+<div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" content="https://orcid.org/0000-0003-0689-794X" href="https://orcid.org/0000-0003-0689-794X" target="orcid.widget" rel="me noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">https://orcid.org/0000-0003-0689-794X</a></div>
 </p>
 
     </div></div><!-- end bio info 2nd column -->
