--- a/Reading/index.html
+++ b/Reading/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <title>Publications</title>
+    <title>Reading</title>
     <style>
 
     </style>
@@ -41,10 +41,12 @@
 <div class="row"> <!-- 1st row -->
     <div class="col-sm-1"></div><!-- padding -->
     
-    <div class="col-sm-5">
+    <div class="col-sm-5"><div class="well">
         <h4><a href="https://arxiv.org/abs/math/9307227">Theoretical Mathematics: towards a cultural synthesis of mathematics and theoretical physics</a></h4>
-        <p><blockquote>"...unreliability is certainly a problem in theoretical physics, where the primary literature often becomes so irrelevant that it is abandoned wholesale. I. M. Singer has compared the physics literature to a blackboard that must be periodically erased. Physicists traditionally obtain much less benefit from the historical back- ground of a problem, and they are less apt to search the literature. The citation half-life of physics papers is much shorter than in mathematics."</blockquote></p>
-    </div> <!-- end column -->
+        <p>Harvard mathematics professor Arthur Jaffe discusses what math can learn from the intuitive, freewheeling nature of theoretical physics and what it should avoid. A word of caution for the aspiring theorist:
+        <blockquote>"...unreliability is certainly a problem in theoretical physics, where the primary literature often becomes so irrelevant that it is abandoned wholesale. I. M. Singer has compared the physics literature to a blackboard that must be periodically erased. mathematics."</blockquote>
+        He does charitably conclude that physicists should not be "rejected as incompetent traditional mathematicians" after all.</p>
+    </div></div> <!-- end column, well -->
     
     <div class="col-sm-5">
         <h4><a href="">Title link</a></h4>
