Add qm picture of bonds interest

--- a/Reading/index.html
+++ b/Reading/index.html
@@ -48,10 +48,10 @@
         He does charitably conclude that physicists should not be "rejected as incompetent traditional mathematicians" after all.</p>
     </div></div> <!-- end column, well -->
     
-    <div class="col-sm-5">
-        <h4><a href="">Title link</a></h4>
-        <p><blockquote>"quotation"</blockquote></p>
-    </div> <!-- end column -->
+    <div class="col-sm-5"><div class="well">
+        <h4><a href="https://en.wikipedia.org/wiki/Erdős–Rényi_model">Random graphs</a></h4>
+        <p>I am interested by the properties of what Paul Erdős and Alfréd Rényi called random graphs. I encountered these in Allen B Downey's excellent book <i>Think Complexity</i> which uses Python to reimplement Watts and Strogatz's <a href="https://doi.org/10.1038/30918">result</a> that small modifications of random graphs can closely replicate the structure of social networks and other interesting "small-world" networks. It also explores the <a href="http://dx.doi.org/10.1126/science.286.5439.509">behavior</a> due to Barabási and Albert of random graphs as they grow.</p>
+    </div></div> <!-- end column -->
 
     
     <div class="col-sm-1"></div><!-- padding -->
