--- a/index.html
+++ b/index.html
@@ -43,13 +43,14 @@
 <h1 style="text-align:center">About Me</h1>
     <p style="text-align:center;"><img src="images/headshot.jpg" class="img-rounded" style="width:300px; height:240px;"></p>
     <div style="padding:10px;">
-    <p style="font-family:Arial; font-size:1.4em;">I am a graduate student in the physics department of the University of Florida. I am interested in computational physics and statistical mechanics, with a focus on how these approaches can be used to investigate complex quantum mechanical and condensed matter systems. I enjoy studying physical models and how implementation of simple rules can explain emergent behaviors.</p>
+        <p style="font-family:Arial; font-size:1.4em;">I am a graduate student in the physics department of the University of Florida. I am interested in computational physics and quantum mechanics, with a focus on how these approaches can be used to investigate exciting systems in condensed matter physics and nanomaterials. I enjoy studying and constructing physical models of these systems and determining how thet can achieve maximum predictive and explanatory power.</p>
     </div>
 
 <!-- relevant personal links -->
 <p style="text-align:center; font-size:1.4em;">
-<a href="https://cpbunker.github.io/images/BunkerCV.pdf">Curriculum Vitae</a> |
-<a href="https://www.linkedin.com/in/christian-bunker-876027101/">LinkedIn</a>
+<a href="https://cpbunker.github.io/images/BunkerCV.pdf">Curriculum Vitae</a> <hr>
+<a href="https://www.linkedin.com/in/christian-bunker-876027101/">LinkedIn</a> <hr>
+<a href="https://www.phys.ufl.edu/wp/">University of Florida Physics</a>
 
 </p>
 
