Add paper links, update research interests

--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
     </div>
 
 <!-- relevant personal links -->
-<p style="text-align:center; font-size:1.4em;">
+<div style="text-align:center; font-size:1.4em;">
 <a href="https://cpbunker.github.io/images/BunkerCV.pdf">Curriculum Vitae</a> <hr>
 <a href="https://www.linkedin.com/in/christian-bunker-876027101/">LinkedIn</a> <hr>
 <a href="https://www.phys.ufl.edu/wp/">University of Florida Physics</a>
 
-</p>
+</div>
 
     </div></div><!-- end bio info 2nd column -->
 
@@ -73,7 +73,7 @@
     </div>
     
     <div class="col-sm-5">
-    <h3 style="text-align:right; font-family:Perpetua">[x, p<sub>x</sub>] = i&#295</h3></div>
+    <h3 style="text-align:right; font-family:Perpetua">[X, P<sub>x</sub>] = i&#295</h3></div>
     <div class="col-sm-1"></div> <!-- blank space -->
 
 </div><!-- close row -->
