--- a/index.html
+++ b/index.html
@@ -32,8 +32,11 @@
 <div class="row equal">
     
     <!-- first column just picture -->
-    <div class="col-sm-7" style="background-color:Gainsboro;padding:20px;">
+    <div class="col-sm-7" style="background-color:Gainsboro;">
+        <figure>
         <img src="images/JuraMts.jpg" class="img-responsive" alt="Jura Mts">
+        <figcaption> Le Reculet, 2nd highest peak in the Jura Mts,Ain, France</figcaption>
+        </figcaption>
     </div>
     
     <!-- 2nd column bio info -->
