Random graph image to reading page

--- a/index.html
+++ b/index.html
@@ -32,12 +32,13 @@
 <div class="row equal">
     
     <!-- first column just picture -->
-    <div class="col-sm-1" style="background-color:Gainsboro;"></div>
-    <div class="col-sm-6" style="background-color:Gainsboro;">
+    <div class="col-sm-7" style="background-color:Gainsboro;">
+        <div class="col-sm-1" style="background-color:Gainsboro;"></div>
+        <div class="col-sm-11" style="background-color:Gainsboro;">
         <figure>
         <img src="images/JuraMts.jpg" class="img-responsive" alt="Jura Mts">
-        <figcaption style="font-family:Arial; font-size:1.4em;"><i> Le Reculet, 2nd highest peak in the Jura Mts, Ain, France</i></figcaption>
-        </figcaption>
+        <figcaption style="font-family:Arial; font-size:1.4em; text-align:center;"><i> Le Reculet, 2nd highest peak in the Jura Mts, Ain, France</i></figcaption>
+        </figcaption></div>
     </div>
     
     <!-- 2nd column bio info -->
