Update research interests

--- a/Research/index.html
+++ b/Research/index.html
@@ -64,11 +64,11 @@
     <div class="row">
         
         <div class="col-sm-4" style="text-align:center; color:SteelBlue;">
-        <h4>Quantum mechanical picture of molecules</h4></div>
+        <h4>Quantum Chemistry</h4></div>
         <div class="col-sm-8" style="padding:10px">
             <p>I have a strong interest in chemistry for a physicist, and am particularly intrigued by quantum explanations of electron behavior in molecules, particularly bonding. During undergrad, I did a <a href="https://cpbunker.github.io/pdfs/BunkerMonteCarloProject.pdf">computational investigation</a> into the average bond length of diatomic hydrogen from quantum mechanics.
         </p>
-        <p>At UF, I hope to do research on the quantum mechanics of molecules at the <a href ="https://efrc.ufl.edu">Center for Molecular Magnetic Quantum Materials</a>.
+        <p>At UF, I plan to do research on the quantum mechanics of molecules at the <a href ="https://efrc.ufl.edu">Center for Molecular Magnetic Quantum Materials</a>. To this end, I am currently self-studying the textbook <it>Modern Quantum Chemistry</it> by Szabo and Ostlund. I plan to apply what I learn doing research with <a href="https://www.phys.ufl.edu/wp/index.php/people/faculty/hai-ping-cheng/">Professor Hai-Ping Cheng's</a> research group this summer.
         </p></div>
         
     </div><!-- end row and its padding -->
