--- a/Reading/QuantumPatents/index.html
+++ b/Reading/QuantumPatents/index.html
@@ -31,7 +31,7 @@
 
 <!-- surround whole page with blank columns to each side -->
 <div class="row" >
-<div class="col-sm-1"></div><!-- blanck space on side -->
+<div class="col-sm-1"></div><!-- blank space on side -->
 
 <div class="col-sm-10" style="background-color:Snow"><!-- inner column has content -->
 
@@ -63,6 +63,7 @@
 </div> <!-- end content column -->
 <div class="col-sm-1"></div><!-- blanck space on side -->
 </div> <!-- end row div that separates outer blank space -->
+</div>
 
 <br>
 <!-- Footer -->
