--- a/Reading/QuantumPatents/index.html
+++ b/Reading/QuantumPatents/index.html
@@ -41,7 +41,7 @@
 <div class="row"> <!-- 1st row -->
 <div class="col-sm-1"></div><!-- padding -->
 
-        <h4><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3554925">Quantum Patents</a></h4>
+        <h4><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3554925">Quantum Patentssss</a></h4>
         <p>My fiancée is in law school, and my interest in physics and the technology breakthroughs that it drives extends to intellectual property law. Quantum computing is a rapidly emerging tech area that also aligns with my area of specialization in physics, so naturally I am interested in research breakthroughs and how they make their way into the courtroom.</p>
         
         <p>Put simply, quantum computing takes advantage of the properties of a quantum state, such as superposition, to better process and store information. As a naive observer, it seems to me that the physics of quantum states is not patentable. What I read here supports this stance, since "Patent claims generally define devices, structures, or methods." In quantum computing, these methods pertain to manipulating qubits, examples being "Method and system for decomposing single- qubit quantum circuits into a discrete basis," and "Method and system that implement a V-gate quantum circuit," two patents owned by Microsoft.</p>
