--- a/Reading/index.html
+++ b/Reading/index.html
@@ -23,6 +23,7 @@
         <li><a href="https://cpbunker.github.io/">Home</a></li>
         <li><a href="https://cpbunker.github.io/Research/">Research</a></li>
         <li><a href="https://cpbunker.github.io/Publications/">Publications</a></li>
+        <li><a href="https://cpbunker.github.io/Teaching/">Teaching</a></li>
     </ul>
     </div>
 </nav>
