--- a/Publications/index.html
+++ b/Publications/index.html
@@ -84,7 +84,7 @@
     <!-- organize each entry as 2 column row -->
     <div class="row">
         
-        <div class="col-sm-2" style="text-align:center;color:SteelBlue;">
+        <div class="col-sm-2" style="color:SteelBlue;">
         <h3>2019</h3></div>
         
         <!-- entries in this year are other column -->
