--- a/Publications/index.html
+++ b/Publications/index.html
@@ -135,9 +135,10 @@
            <div class="col-sm-1"></div> <!-- blank space -->
            <div class="col-sm-5">
            <h3 style="text-align:left">Contact</h3>
-           <p> cpbunker(at)ufl(dot)edu<br>
+           <p><a href="https://www.linkedin.com/in/christian-bunker-876027101/">LinkedIn</a><br
                <div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" content="https://orcid.org/0000-0003-0689-794X" href="https://orcid.org/0000-0003-0689-794X" target="orcid.widget" rel="me noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">https://orcid.org/0000-0003-0689-794X</a></div><br>
-           <a href="https://www.linkedin.com/in/christian-bunker-876027101/">LinkedIn</a></p>
+           cpbunker@ufl.edu<br>
+           </p>
            </div>
            
            <div class="col-sm-5">
