--- a/Teaching/index.html
+++ b/Teaching/index.html
@@ -28,14 +28,14 @@
     </div>
 </nav>
     
-<!-- Research info -->
+<!-- Teaching -->
 
 <!-- surround whole page with blank columns to each side -->
 <div class="row" >
 <div class="col-sm-1"></div><!-- blanck space on side -->
 
 <div class="col-sm-10" style="background-color:Snow"><!-- inner column has content -->
-<h1 style="font-family:Trebuchet MS; text-align:right;"><b>Teaching</b></h1><br><br>
+<h1 style="font-family:Trebuchet MS; text-align:right;"><b>TEACHING</b></h1><br><br>
 <hr><h2 style="text-align:center;">TA Experience</h2><hr>
 
 <!-- 1 row for each -->
