--- a/Publications/index.html
+++ b/Publications/index.html
@@ -140,6 +140,8 @@
     
 </div> <!-- end content column -->
 <div class="col-sm-1"></div><!-- blanck space on side -->
+    
+    test!
 </div> <!-- end row div that separates outer blank space -->
 
        <br>
