--- a/Publications/index.html
+++ b/Publications/index.html
@@ -134,8 +134,7 @@
     </div> <!-- end padding of content -->
     </div> <!-- end content column -->
 <div class="col-sm-1"></div><!-- blanck space on side -->
-    </div>
-    test!
+    </div></div>
 </div> <!-- end row div that separates outer blank space -->
 
        <br>
