--- a/Publications/index.html
+++ b/Publications/index.html
@@ -133,8 +133,8 @@
     
     </div> <!-- end padding of content -->
     </div> <!-- end content column -->
-<div class="col-sm-1"></div><!-- blanck space on side -->
-    </div></div>
+<div class="col-sm-1"></div><!-- blank space on side -->
+    </div>
 </div> <!-- end row div that separates outer blank space -->
 
        <br>
