--- a/index.html
+++ b/index.html
@@ -45,18 +45,16 @@
     <!-- 2nd column bio info -->
     <div class="col-sm-5" style="background-color:Gainsboro; height:auto;">
     <div style="padding:20px;">
-    
-<h1 style="text-align:center">About Me</h1>
+  
     <p style="text-align:center;"><img src="images/TaraHollowHeadshot.jpg" class="img-rounded" style="width:300px; height:440px;"></p>
     <div style="padding:10px;">
-        <p style="font-family:Arial; font-size:1.4em;">I am a graduate student in the physics department of the University of Florida. I am interested in computational physics and quantum mechanics, with a focus on how these approaches can be used to investigate exciting systems in condensed matter physics and nanomaterials. I enjoy studying and constructing physical models of these systems and determining how thet can achieve maximum predictive and explanatory power.</p>
+        <p style="font-family:Arial; font-size:1.4em;">I am a research assistant at the <a href="https://efrc.ufl.edu">Center for Molecular Magnetic Quantum Materials</a> at the University of Florida. I use numerical methods in quantum chemistry to investigate the rich physics of molecular systems.</p>
     </div>
 
 <!-- relevant personal links -->
 <div style="text-align:center; font-size:1.4em;">
-<a href="https://cpbunker.github.io/images/BunkerCV.pdf">Curriculum Vitae</a> <hr>
-<a href="https://www.linkedin.com/in/christian-bunker-876027101/">LinkedIn</a> <hr>
-<a href="https://www.phys.ufl.edu/wp/">University of Florida Physics</a>
+<hr><a href="https://cpbunker.github.io/images/BunkerCV.pdf">Curriculum Vitae</a> <hr>
+
 
 </div>
 
@@ -75,7 +73,7 @@
     <h3 style="text-align:left">Contact</h3>
     <p> <a href="https://www.linkedin.com/in/christian-bunker-876027101/">LinkedIn</a>
     <div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" content="https://orcid.org/0000-0003-0689-794X" href="https://orcid.org/0000-0003-0689-794X" target="orcid.widget" rel="me noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">https://orcid.org/0000-0003-0689-794X</a></div><br>
-    cpbunker(at)ufl(dot)edu<br> </p>
+    cpbunker@ufl.edu<br> </p>
     </div>
     
     <div class="col-sm-5">
