--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="col-sm-11" style="background-color:Gainsboro;">
         <figure>
         <img src="images/JuraMts.jpg" class="img-responsive" alt="Jura Mts">
-        <figcaption style="font-family:Arial; font-size:1.4em; text-align:center;"><i> Le Reculet, Jura Mountains, France</i></figcaption>
+        <figcaption style="font-family:Arial; font-size:1.4em; text-align:center;"><i> Hiking in the Jura Mountains</i></figcaption>
         </figcaption></div>
     </div>
     
