--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="col-sm-11" style="background-color:Gainsboro;">
         <figure>
         <img src="images/JuraMts.jpg" class="img-responsive" alt="Jura Mts">
-        <figcaption style="font-family:Arial; font-size:1.4em; text-align:center;"><i> Hiking in the Jura Mountains</i></figcaption>
+        <figcaption style="font-family:Arial; font-size:18pt; text-align:center;"><i> Hiking in the Jura Mountains</i></figcaption>
         </figcaption></div>
     </div>
     
@@ -48,11 +48,11 @@
   
     <p style="text-align:center;"><img src="images/TaraHollowHeadshot.jpg" class="img-rounded" style="width:300px; height:440px;"></p>
     <div style="padding:10px;">
-        <p style="font-family:Arial; font-size:1.4em;">I am a research assistant at the <a href="https://efrc.ufl.edu">Center for Molecular Magnetic Quantum Materials</a> at the University of Florida. I use numerical methods in quantum chemistry to investigate the rich physics of molecular systems.</p>
+        <p style="font-family:Arial; font-size:18pt;">I am a research assistant at the <a href="https://efrc.ufl.edu">Center for Molecular Magnetic Quantum Materials</a> at the University of Florida. I use numerical methods in quantum chemistry to investigate the rich physics of molecular systems.</p>
     </div>
 
 <!-- relevant personal links -->
-<div style="text-align:center; font-size:1.4em;">
+<div style="text-align:center; font-size:18pt;">
 <hr><a href="https://cpbunker.github.io/images/BunkerCV.pdf">Curriculum Vitae</a> <hr>
 
 
