--- a/index.html
+++ b/index.html
@@ -71,16 +71,16 @@
     <div class="col-sm-1"></div> <!-- blank space -->
     <div class="col-sm-5">
     <h3 style="text-align:left">Contact</h3>
-    <ul id="menu>
+    <ul id="menu">
         <li><a href="https://www.linkedin.com/in/christian-bunker-876027101/">LinkedIn</a></li>
         <li><a class="nodec icon-github" href="http://github.com/cpbunker" rel="me"></a></li>
         <li><div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" content="https://orcid.org/0000-0003-0689-794X" href="https://orcid.org/0000-0003-0689-794X" target="orcid.widget" rel="me noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon"></a></div></li>
         <li>cpbunker@ufl.edu</li>
     </ul></div>
     
-    <div class="col-sm-5">
+    <div class="col-sm-5" style = "text-align:right; font-size:18px;">
         <math xmlns = "http://www.w3.org/1998/Math/MathML">
-            <mi>[X,P]</mi><mo>=</mo><mi>i&#295S</mi>
+            <mi>[X,P]</mi><mo>=</mo><mi>i&#295</mi>
         </math>
     </div>
     <div class="col-sm-1"></div> <!-- blank space -->
