--- a/Publications/index.html
+++ b/Publications/index.html
@@ -40,7 +40,7 @@
 <div style="padding:20px;"> <!-- pad inner column -->
     
 <!-- Chronological list of published papers -->
-<h2 style="text-align:center;"><b>Journal Articles</b></h2><hr>
+<hr><h2 style="text-align:center;">Journal Articles</h2><hr>
 
     <!-- 1 row for each year -->
     <div class="row">
@@ -75,7 +75,7 @@
     </div><br><br> <!-- end row for year -->
 
 <!-- Chronological list of presentations -->
-<h2 style="text-align:center;"><b>Presentations & Reports</b></h2><hr>
+<hr><h2 style="text-align:center;">Presentations & Reports</h2><hr>
     
     <!-- 1 row for each year -->
     <div class="row">
