--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <div style="padding:20px;">
         
         <p style="text-align:center;"><img src="images/TaraHollowHeadshot.jpg" class="img-responsive""></p>
+        <div style="padding:10px;">
             <p style="font-family:Arial;font-size:18px;">I am a research assistant at the <a href="https://efrc.ufl.edu">Center for Molecular Magnetic Quantum Materials</a> at the University of Florida. I use numerical methods in quantum chemistry to investigate the rich physics of molecular systems.</p>
         </div>
     
