--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
 
 <!-- Intro -->
 <!-- outer BS row container holds columns -->
-<div class="row row-no gutters">
+<div class="row row-no gutters container-fluid">
 
     <!-- 1st column bio info -->
-    <div class="col-xs-3" style="background-color:Gainsboro;">
+    <div class="col-xs-11 col-sm-3" style="background-color:Gainsboro;">
         <div style="padding:20px;text-align:center;font-size:20px">
             <img src="images/TaraHollowHeadshot.jpg" class="img-responsive"">
             <div style="padding:10px;">I am a research assistant at the <a href="https://efrc.ufl.edu">Center for Molecular Magnetic Quantum Materials</a> at the University of Florida. I use numerical methods in quantum chemistry to investigate the rich physics of molecular systems.</div>
     
             <!-- relevant personal links -->
-            <hr><a href="https://cpbunker.github.io/images/BunkerCV.pdf">CV</a>
+            <hr><a href="https://cpbunker.github.io/pdfs/BunkerCV.pdf">CV</a>
             <hr><a href="https://www.linkedin.com/in/christian-bunker-876027101/"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
                 <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
               </svg></a>
@@ -53,7 +53,7 @@
     </div></div><!-- end bio infocolumn -->
     
     <!-- 2nd column just picture -->
-    <div class="col-sm-9" style="background-color:Gainsboro;">
+    <div class="col-xs-1 col-sm-9" style="background-color:Gainsboro;">
         <img src="images/JuraMts.jpg" class="img-responsive" >
     </div>
 
