--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <ul class="nav navbar-nav">
         <li class="active"><a href="#">Home</a></li>
         <li><a href="https://cpbunker.github.io/Research/">Research</a></li>
+        <li><a href="https://cpbunker.github.io/Publications/">Publications</a></li>
     </ul>
     </div>
 </nav>
