--- a/Research/index.html
+++ b/Research/index.html
@@ -17,13 +17,12 @@
 <nav class="navbar navbar-default">
     <div class="container-fluid">
     <div class="navbar-header">
-        <a class="navbar-brand" href="#">Christian Bunker</a>
+        <a class="navbar-brand" href="https://en.wikipedia.org/wiki/Glossary_of_elementary_quantum_mechanics">Christian Bunker</a>
     </div>
     <ul class="nav navbar-nav">
-        <li><a href="https://cpbunker.github.io/">Home</a></li>
+        <li><a href="#">Home</a></li>
         <li class="active"><a href="https://cpbunker.github.io/Research/">Research</a></li>
         <li><a href="https://cpbunker.github.io/Publications/">Publications</a></li>
-        <li><a href="https://cpbunker.github.io/Teaching/">Teaching</a></li>
     </ul>
     </div>
 </nav>
