--- a/Publications/index.html
+++ b/Publications/index.html
@@ -20,7 +20,7 @@
         <a class="navbar-brand" href="https://en.wikipedia.org/wiki/Glossary_of_elementary_quantum_mechanics">Christian Bunker</a>
     </div>
     <ul class="nav navbar-nav">
-        <li><a href="#">Home</a></li>
+        <li><a href="https://cpbunker.github.io">Home</a></li>
         <li><a href="https://cpbunker.github.io/Research/">Research</a></li>
         <li class="active"><a href="https://cpbunker.github.io/Publications/">Publications</a></li>
     </ul>
