--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               </svg></a>
             <hr><div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" content="https://orcid.org/0000-0003-0689-794X" href="https://orcid.org/0000-0003-0689-794X" target="orcid.widget" rel="me noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon"></a></div>
             <hr>
-    </div>
+    </div></div>
     </div><!-- end bio infocolumn -->
     
     
