--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!-- picture -->
     <div class="col-sm-3" style="background-color:Gainsboro;">
         <div style="padding:20px;">
-            <img src="images/TaraHollowHeadshot.jpg" class="img-responsive"">
+            <img src="images/Headshot.jpg" class="img-responsive"">
         </div>
     </div>
                                                                                                                                                   
